--- a/toddleglow.service
+++ b/toddleglow.service
@@ -4,6 +4,7 @@ Description=ToddleGlow
 [Service]
 User=pi
 ExecStart=/home/pi/toddleglow/toddleglow.py
+ExecStop=/bin/kill -TERM $MAINPID
 
 [Install]
 WantedBy=multi-user.target
