--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: toddleglow
 Section: unknown
 Priority: extra
 Maintainer: Dan Farnsworth <absltkaos@gmail.com>
-Build-Depends: debhelper (>= 9), dh-python, dh-systemd, python3-all, python-setuptools
+Build-Depends: debhelper (>= 9), dh-python, dh-systemd, python-all, python-setuptools
 Standards-Version: 3.7.2
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.4
