Fix hardcoded timezone bits in TimeInterval class

--- a/config.json
+++ b/config.json
@@ -12,5 +12,6 @@
         "white": [], 
         "red": []
     }, 
-    "piglow_enabled": false
+    "piglow_enabled": false,
+    "time_zone": "US/Mountain"
 }
